Some FindBugs-warnings corrected
git-svn-id: https://mobac.svn.sourceforge.net/svnroot/mobac/trunk@519 83dc79ef-cac3-4f51-90f7-e9e68c987b9c